Fixed issue #4